# NYU-NYUSH-CS

./: .breakpoints  .gitmodules  LICENSE  README.md  pyproject.toml
CA_201/HW2/: e01.c  e02a.c  e02b.c  e02d.c  e03a.c  e03b.c  e03c.c  e03d.c  e04.c
CA_201/HW3/: e01.c  e02.c  e03.c  e04.c
CA_201/HW4/: aex.c
CS-Placement-Spring2020/: README.md  Solutions.ipynb  Test.ipynb  mywords.txt
DNY/: Meaning plot.ipynb  dny.txt
DS_210/: README.md
DS_210/W1/: Student_find_number_that_appears_only_once.py  Student_stock_selling.py
DS_210/W2/: InsertionVSbuiltinClassVersion.py
DS_210/W3/: decimal_to_binary_class.py
DS_210/W4/: UserDefinedDynamicArray_for_Students.py  experiment_list_size.py
DS_210/W5/: DSSyllabus.txt  DSSyllabus_reverse.txt  array_stack_student.py  reverse_file_student.py
GA_2270/: Spoon-Knife.html
GY_6823/Lab2/: Network_Capture__Analysis_and_Scanning- Lab 2 (3).docx
GY_6823/Lab3/: arp_gmatk.py  arp_poison.py  arp_rpatk.py  arp_rqpk.py  mitm_netcat.py  mitm_telnet.py
GY_9163/: db-deployment.yaml  django-deploy.yaml  git_link.txt  good_card  module2.yaml  mycode.c  original.c  secret.yaml  xxx
GY_9163/assignment-3-module-1-sarkarghya-main/: .gitattributes  Dockerfile  FAQ.md  README.md  requirements.txt  setup.sh
ICS 101/: README.md
ICS 101/Assignment_01/: Q1_lenLastWord.py  Q1_prime.py  Q2_int2hex.py  Q2_numOfOccur.py  Q3_camel2Snake.py  Q3_int2Rome.py  Q4_matrixMirror.py  Q4_zodiac.py  Q5_CaesarEncryption.py  Q5_roundOffError.py
Name_harvester/: README.md  co2025ids.txt  google_crawl_ex.py
UY_4793/: client.py  server.py
(+1081 files in other folders)
