[tool.poetry]
name = "repl_python3_NYUShanghaiCS"
version = "0.1.0"
description = ""
authors = ["sarkarghya <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
